# brdkAGV_PLC

./: .gitignore  AGV.apj  README.md  exOs.txt
Logical/: .gitignore  Package.pkg
Logical/Libraries/: Package.pkg
Logical/Libraries/AsIOTime/: AsIOTime.fun  binary.lby
Logical/Libraries/AsIOTime/SG4/: AsIOTime.h
Logical/Libraries/ExData/: Binary.lby
Logical/Libraries/ExData/SG4/: ExData.br  ExData.h  exos_api.h  exos_log.h  lxi.h  zmq.h
Logical/Libraries/ExData/SG4/Arm/: ExData.br
Logical/Libraries/ExDeploy/: Binary.lby
Logical/Libraries/ExDeploy/SG4/: ExDeploy.br  ExDeploy.h
Logical/Libraries/ExDeploy/SG4/Arm/: ExDeploy.br
Logical/Libraries/ExOS/: Binary.lby  ExOS.fun  ExOS.typ
Logical/Libraries/ExOS/SG4/: ExOS.br  ExOS.h
Logical/Libraries/ExOS/SG4/Arm/: ExOS.br
Logical/Libraries/MTBasics/: MTBasics.typ  binary.lby
Logical/Libraries/MTBasics/SG4/: MTBasics.h
Logical/Libraries/MTBasics/SG4/ARM/: MTBasics.br
Logical/Libraries/MTBasics/SG4/IA32/: MTBasics.br
Logical/Libraries/MTFilter/: MTFilter.fun  MTFilter.typ  MTFilter.var  binary.lby
Logical/Libraries/MTFilter/SG4/: MTFilter.h
Logical/Libraries/MTFilter/SG4/ARM/: MTFilter.br
Logical/Libraries/MTFilter/SG4/IA32/: MTFilter.br
Logical/Libraries/ROS/: ANSIC.lby  ROS.fun  Types.typ  normalizeAngle.c
Logical/WaterTank/: Package.pkg  WaterTank.exospkg
Logical/WaterTank/Linux/: CMakeLists.txt  Package.pkg  build.sh  libWaterTank.py  libwatertank.c  libwatertank.h  libwatertank.i  watertank.py
Logical/WaterTank/WaterTank/: ANSIC.lby  WaterTank.fun  WaterTank.typ  exos_watertank.c  exos_watertank.h  heapsize.cpp  libwatertank.c  libwatertank.h  watertank.c
Logical/WaterTank/WaterTank_0/: IEC.prg  WaterTank.st  WaterTank.var
Logical/motorCtrl/: IEC.prg  Main.st  Types.typ  Variables.var
Logical/ros_topics_typ/: ros_topics_typ.exospkg
Logical/ros_topics_typ - Copy/: Package.pkg
Logical/ros_topics_typ - Copy/Linux/: Package.pkg  exos_ros_topics_typ.h  libros_topics_typ.py
Logical/ros_topics_typ - Copy/motorCtrl/: IEC.prg  motorCtrl.typ  ros_topics_typ.st  setupPointers.st
Logical/ros_topics_typ - Copy/ros_topics/: ANSIC.lby  exos_ros_topics_typ.c
Logical/ros_topics_typ/Linux/: CMakeLists.txt  libros_topics_typ.c  ros_topics_typ.py  ros_topics_typ1.py  ros_topics_typ3.py
Logical/ros_topics_typ/motorCtrl/: ros_topics_typ.st  ros_topics_typ.var
Logical/ros_topics_typ/ros_topics_0/: ros_topics_typ.var
Logical/test/: ros_topics.typ
Logical/test/ros_topics_typ/: Package.pkg
Logical/test/ros_topics_typ/Linux/: Package.pkg  exos_ros_topics_typ.h  libros_topics_typ.c  libros_topics_typ.h  libros_topics_typ.i
Logical/test/ros_topics_typ/ros_topics/: exos_ros_topics_typ.c  ros_topics_typ.c
Logical/test/ros_topics_typ/ros_topics_0/: IEC.prg  ros_topics_typ.st
Physical/: Physical.pkg
Physical/CP1586/: Hardware.hw  Hardware.hwl
Physical/CP1586/X20CP1586/: Cpu.pkg  Cpu.sw
Physical/CP1586/X20CP1586/exosTechnology/: Package.pkg  target.exostarget
Physical/Config1/: Config.pkg  Hardware.hw
Physical/Config1/X90CP174_48_00/: Cpu.pkg  Cpu.sw  IoMap.iom
Physical/Config1/X90CP174_48_00/Connectivity/OpcUA/: OpcUaMap.uad
Physical/Config1/X90CP174_48_00/exosTechnology/: Package.pkg  components.exoscomponent  target.exostarget
Physical/Config1/X90CP174_48_00/mappVision/: Package.pkg
vsCode/ros_topics_typ/: .gitattributes  .gitignore  Package.pkg  ros_topics_typ.exospkg
vsCode/ros_topics_typ/Linux/: build.sh
vsCode/ros_topics_typ/ros_topics/: ros_topics.fun
vsCode/ros_topics_typ/ros_topics_0/: ros_topics_typ.st
